1. Fixed mirroring not happening for Edge. 2. Fixed punctuations getting lost on Firefox and Edge.

--- a/css/TextManipulations.css
+++ b/css/TextManipulations.css
@@ -1,4 +1,5 @@
 .mirrorTheLetters {
+    transform: rotateY(180deg);
     webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
     -o-transform: rotateY(180deg);
@@ -7,6 +8,7 @@
 }
 
 .upsideDown {
+    transform: rotateX(180deg);
     webkit-transform: rotateX(180deg);
     -moz-transform: rotateX(180deg);
     -o-transform: rotateX(180deg);
@@ -20,10 +22,10 @@
 }
 
 .zoom {
-    -moz-transform: scale(1.05);
+    -moz-transform: scale(1.03);
     -moz-transform-origin: 0 0;
-    transform: scale(1.05);
-    transform-origin: 0.0;
+    transform: scale(1.03);
+    transform-origin: 0 0;
 }
 
 .zoomInZoomOut {
@@ -41,7 +43,7 @@
 }
 
 .inTheSameLine {
-    display: inline-block;
+    display: inline-block !important;
     white-space: pre;
 }
 
@@ -124,12 +126,12 @@
 @keyframes zoomInZoomOut {
     0%, 100% {
         transform: scale(1.05);
-        transform-origin: 0.0;
+        transform-origin: 0 0;
     }
 
     50% {
         transform: scale(1);
-        transform-origin: 0.0;
+        transform-origin: 0 0;
     }
 }
 
